--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
+    "antd": "^3.19.8",
     "less": "^3.9.0",
     "next": "^8.1.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
