--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.19.8",
     "less": "^3.9.0",
+    "moment": "^2.24.0",
     "next": "^8.1.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.0"
+    "autoprefixer": "^9.6.0",
+    "babel-plugin-import": "^1.12.0"
   },
   "scripts": {
     "dev": "next",
