--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@zeit/next-less": "^1.0.1",
     "antd": "^3.19.8",
     "autoprefixer": "^9.6.0",
     "babel-plugin-import": "^1.12.0",
     "less": "^3.9.0",
+    "less-vars-to-js": "^1.3.0",
     "moment": "^2.24.0",
     "next": "^8.1.0",
     "next-antd-aza-less": "^1.0.2",
-    "normalize.css": "^8.0.1",
     "null-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
