--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,8 @@
         "libraryName": "antd",
         "style": true
       }
-    ]
+    ],
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
 }
