--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "dependencies": {
     "antd": "^3.19.8",
-    "autoprefixer": "^9.6.0",
-    "babel-plugin-import": "^1.12.0",
     "less": "^3.9.0",
-    "less-vars-to-js": "^1.3.0",
+    "mobx": "^5.10.1",
+    "mobx-react": "^6.1.1",
     "moment": "^2.24.0",
     "next": "^8.1.0",
-    "next-antd-aza-less": "^1.0.2",
-    "null-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0",
+    "babel-plugin-import": "^1.12.0",
+    "autoprefixer": "^9.6.0",
+    "next-antd-aza-less": "^1.0.2",
+    "null-loader": "^3.0.0",
+    "less-vars-to-js": "^1.3.0"
   },
   "scripts": {
     "dev": "next",
