--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "antd": "^3.19.8",
+    "axios": "^0.19.0",
     "less": "^3.9.0",
     "mobx": "^5.10.1",
     "mobx-react": "^6.1.1",
